Fix search box button and input box which were not aligned

--- a/style.css
+++ b/style.css
@@ -1577,6 +1577,8 @@ ol.comment-list, .comment-list ol {
 input.search-field {
     padding: 3pt;
     display: block;
+    width:100%;
+    box-sizing:border-box;
 }
 
 @media only screen and (max-width: 750px) {
